# Mini-SLAM

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_SLAM.sh  build_thirdparty.sh
.devcontainer/: devcontainer.darwin.json  devcontainer.linux.json  devcontainer.windows.json  devcontainer.wsl2.json
Apps/: CMakeLists.txt
Data/: EuRoC.yaml  TUM-VI.yaml  TUMRGBD.yaml
Evaluation/GroundTruth/: room1.txt
Modules/: CMakeLists.txt
Modules/Calibration/: KannalaBrandt8.cc  KannalaBrandt8.h  PinHole.cc
Modules/DatasetLoader/: TUMVILoader.cc  TUMVILoader.h
Modules/Matching/: DescriptorMatching.cc
Modules/Optimization/: g2oTypes.h
Modules/System/: MiniSLAM.cc  Settings.cc
Modules/Tracking/: MonocularMapInitializer.cc  MonocularMapInitializer.h
Modules/Visualization/: MapVisualizer.cc
